# Nexus

./: CMakeLists.txt  Makefile  README.md  app  app.c  errors.h  modules.order  nexus.c  nexus.conf  nexus.h  nexus.ko  nexus.mod  nexus.mod.c  nexus_private.h
debian/: changelog  control  copyright  dirs  files  install  nexus-dkms.dkms  rules
nexus/: CMakeLists.txt  Makefile  app.c  area.c  attribute.c  attribute.h  errors.h  fs_caps_kernel.h  index.c  index.h  kmsg.h  nexus.c  nexus.h  nexus_core.c  nexus_private.h  node_monitor.c  node_monitor.h  port.c  query.c  query.h  sem.c  util.h  volume.c  volume.h  vref.c  vref.h
sem/: Makefile  sem.c
vref/: Makefile  vref.c
